# ai-engineering-fordham

./: README.md  pyproject.toml
data/: fordham-website-windows.json
homework/: homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb
lecture_code/: 1.getting-started.ipynb  2.working-with-llms.ipynb  4.embeddings-semantic-search.ipynb  5.you-can-just-build-things.ipynb
