[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.76.0",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.59.0",
    "instructor>=1.14.4",
    "litellm>=1.81.1",
    "llama-index>=0.14.14",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pystemmer>=3.0.0",
    "sentence-transformers>=5.2.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
]
